# libtorch-fasterrcnn

./: CMakeLists.txt  README.md  caffe2_converter.py  custom_data.py  torchscript_traced_mask_rcnn.cpp  video.cpp
